--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --config webpack.dev.js --open",
+    "dev-server": "npm run build-dev && node server.js",
     "prod": "webpack --config webpack.prod.js",
     "start": "http-server ./public",
     "clean": "rm -rf ./node_modules ./public && rm ./package-lock.json",
-    "build": "npm run prod"
+    "build": "npm run prod",
+    "build-dev": "webpack --config webpack.dev.js"
   },
   "author": "tzbee",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
+    "express": "^4.16.4",
     "http-server": "^0.11.1",
+    "jquery": "^3.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
