--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "static-web-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "webpack-dev-server --config webpack.dev.js --open",
-    "dev-server": "npm run build-dev && node server.js",
+    "dev-server": "npm run build-dev & nodemon server.js",
     "prod": "webpack --config webpack.prod.js",
     "start": "node server.js",
     "clean": "rm -rf ./node_modules ./public && rm ./package-lock.json",
@@ -32,7 +32,9 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "browser-sync": "^2.26.5",
     "clean-webpack-plugin": "^0.1.19",
+    "connect-browser-sync": "^2.1.0",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-plugin-import": "^2.17.2",
@@ -46,6 +48,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.12.0",
+    "nodemon": "^1.19.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "sass-loader": "^7.1.0",
     "terser-webpack-plugin": "^1.2.3",
